--- a/personal-website-web/package.json
+++ b/personal-website-web/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-text-transition": "^3.0.2",
     "sass": "^1.54.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -16,9 +17,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react": "^18.0.15",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.46",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6"
   },
   "scripts": {
