--- a/personal-website-web/package.json
+++ b/personal-website-web/package.json
@@ -6,6 +6,7 @@
     "normalize-scss": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "react-text-transition": "^3.0.2",
@@ -20,7 +21,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.46",
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
