--- a/personal-website-web/package.json
+++ b/personal-website-web/package.json
@@ -2,15 +2,23 @@
   "name": "personal-website-web",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*",
+    "lint:fix": "eslint src/**/* --fix",
+    "lint:quiet": "eslint src/**/* --quiet"
+  },
   "dependencies": {
     "normalize-scss": "^7.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "react-text-transition": "^3.0.2",
-    "sass": "^1.54.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -22,16 +30,9 @@
     "@types/node": "^16.11.46",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/react-helmet": "^6.1.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*",
-    "lint:fix": "eslint src/**/* --fix",
-    "lint:quiet": "eslint src/**/* --quiet"
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-router": "^5.1.18",
+    "sass": "^1.54.3"
   },
   "browserslist": {
     "production": [
